@@ -100,7 +100,7 @@ An ANT build file allows to package the xpi for Firefox installation (read READM
 		<lime-api.version>0.4.1</lime-api.version>
 		<guava.version>18.0</guava.version>
 		<annotations.version>2.0.1</annotations.version>
-		<sheet2rdf.version>4.1.0</sheet2rdf.version>
+		<sheet2rdf.version>4.2.0-SNAPSHOT</sheet2rdf.version>
 		<coda.version>1.7.1</coda.version>
 		<osgi.version>5.0.0</osgi.version>
 		<maple.version>0.0.7</maple.version>
